Version 19

--Fixed an obscur bug where the tool/tile grid-picker pages could get stuck in
  a state where they would repeatedly kick you out of your house (thanks Josh
  Collins).




Version 18   Live Server Fixes

--Gun price up to 1200 to strengthen Pit Bulls somewhat, and Powered Door price
  down to 600 to compensate for door drawbacks.

--Chills are now put on all houses player entered in the last hour when player
  dies, regardless of where player dies.  Player is haunted by what they did
  during the last hour of their past life.  This closes the "go home and kill
  yourself to get more money and try that house again" exploit.

--All tools dumped at the end of a robbery (including when reaching vault or
  running out the door) are now added to the vault.  This is safe now, because
  the suicide-at-home exploit has been closed.

--Changed from a linear bypass-cost curve to a sqrt-based curve, creating
  diminishing returns as you build with more expensive tiles, and increasing
  the viability of low-end house designs.

--Lowered cost of bypassing an ON electric floor from 400 to 100 to compensate
  for the fact that it passes power, so it's more powerful than other
  bottlenecks.

--Fixed possible negative balance when selling tools to buy paintings but
  quitting the game before house check-in (thanks Colorfusion).

--Added parameter for how many times a vault can be reached before vault
  salary stops, and upped that parameter from 2 to 4 to increase size of
  house list.

--Reduced minimum salary from 0.50 of max down to 0.10 of max to help
  well-designed starting houses survive the night better.

--Chills now only apply if you die in a house OR use tools in a house
  (thanks Jere).

--Fixed bug in way that MySQL UPDATE success was being detected, which
  occasionally would cause retried start_self_test, end_self_test, and
  ping_house calls to fail, leading to unfair player death (thanks Joshua
  Collins).
