@@ -109,6 +109,7 @@ graphics/safeMoveOn.tga \
 graphics/safeMoveOff.tga \
 graphics/eyedropperOn.tga \
 graphics/eyedropperOff.tga \
+graphics/skull.tga \
 
 
 
